tolk-tester/tests/invalid-syntax/err-3586.tolk
fun main() {
    try {}
    catch(err, arg, more) {}
}

/**
@compilation_should_fail
@stderr expected `)`, got `,`
 */
